# all_right_SR

./: .gitignore  LICENSE  MANIFEST.in  README.md  SCREENER_METHODS.md  SCREENER_METHODS_UPDATED.md  SISSO模型创建与训练指南.md  SISSO符号回归方法使用指南-更新版.md  SYMBOLIC_REGRESSION_METHODS.md  pyproject.toml  requirements-dev.txt  requirements.txt  screener_methods_demo.py  setup.py  sisso计算库技术方案.md  test01.py  test02_improved.py  test03.py  test_materials_bulk_modulus.py  test_screeners.py  多种输入格式支持指南.md
SR_py/: cli.py
SR_py/dsl/: complexity.py  expr.py
SR_py/evolutionary/: __init__.py  ga_pso.py  gp.py  island_gp.py
SR_py/hybrid/: evolutionary_gradient.py  multi_objective.py  physics_informed.py
SR_py/io/: __init__.py
SR_py/metrics/: regression.py
SR_py/model/: __init__.py  formatted_report.py  pipeline.py  report.py
SR_py/neural_symbolic/: deep_sr.py  hybrid_neural.py  rl_sr.py
SR_py/ops/: physics.py
SR_py/probabilistic/: __init__.py  bsr.py  ppi.py
SR_py/sparse_regression/: __init__.py  lasso_ridge_omp.py  sindy.py  sisso.py
SR_py/utils/: data_conversion.py  logging.py  parallel.py  seed.py
all_right_SR.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
demo/: README.py  bayesian_symbolic_regression_demo.py  deep_symbolic_regression_demo.py  ga_pso_hybrid_demo.py  genetic_programming_demo.py  island_gp_demo.py  lasso_regression_demo.py  multi_objective_sr_demo.py  physics_informed_sr_demo.py  probabilistic_program_induction_demo.py  reinforcement_learning_sr_demo.py  run_all_demos.py  sindy_demo.py  sisso_basic_demo.py  test_demos.py
sisso_py/: __init__.py  config.py  interface.py
sisso_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sisso_py/dsl/: dimension.py
sisso_py/evolutionary/: ga_pso.py  gp.py
sisso_py/hybrid/: evolutionary_gradient.py  multi_objective.py  physics_informed.py
sisso_py/metrics/: symbolic.py
sisso_py/model/: formatted_report.py  report.py
sisso_py/neural_symbolic/: deep_sr.py  hybrid_neural.py  rl_sr.py
sisso_py/ops/: __init__.py  abs_sign.py  base.py  log_exp.py  poly.py
sisso_py/probabilistic/: bsr.py  ppi.py
sisso_py/sis/: screening.py  so.py
sisso_py/sparse_regression/: lasso_ridge_omp.py  sindy.py  sisso.py
sisso_py/utils/: __init__.py  data_conversion.py
test/: comprehensive_symbolic_regression_test.py  demo_beautiful_report.py  frist_test.py  test01.py  test_lasso_only.py  test_with_metrics.py
tests/: comprehensive_symbolic_regression_test.py  test.py  test_explain_interface.py  test_explain_reports.py  test_input_formats.py  test_island_gp.py  test_pipeline.py
